[package]
name = "version-vine"
version = "0.1.0"
edition = "2021"
authors = ["Freek van Zee"]
description = """
A git flow opinionated SemVer generating CLI written in Rust.
It's intended to be simple and fast
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.17", features = ["derive"] }
mockall = "0.12.1"
regex = "1.10.2"
semver = "1.0.21"
serde_json = "1.0.111"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size instead of speed.
panic = "abort" # Abort on panic. Reduces binary size.
